# eda-public-cycle

./: BASIC.md  README.md  eda_public_cycle.ipynb  eda_seoulpay_payment.ipynb  main.py  pyproject.toml
data/: 공공자전거 대여소 정보(api수집).csv
